Updated User APIs
